--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "test",
   "main": "dist/app.js",
-  "author": "gxm",
+  "author": "apowo",
   "license": "MIT",
   "bin": {
     "outside": "bin/outside"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
-    "dev:core": "rimraf dist && webpack --config webpack.config.js",
-    "dev:mod": "webpack --config webpack.mod.config.js",
-    "build": "rm -rf dist && webpack && mv dist/dist/* dist/",
-    "start": "webpack-dev-server --mode development --config webpack.config.js",
-    "testNode": "rimraf dist && webpack --config webpack.test.config.js"
+    "dev": "rm -rf dist && webpack && mv dist/dist/* dist/ && webpack-dev-server --mode development"
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "cli.js": "^1.0.2",
-    "common-injector": "^1.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "dts-dom": "^3.6.0",
     "expose-loader": "^0.7.5",
@@ -25,7 +19,6 @@
     "js-base64": "^3.4.5",
     "jsdoc": "^3.6.4",
     "phaser": "^3.23.0",
-    "phaser3-rex-plugins": "https://code.apowo.com/PixelPai/phaser3-rexui.git",
     "pixelpai_proto": "git+ssh://git@code.apowo.com:PixelPai/pixelpai_proto.git#typescriptdev",
     "remove": "^0.1.5",
     "ts-loader": "^6.2.1",
@@ -38,14 +31,12 @@
     "config": "^3.3.1",
     "config-webpack": "^1.0.4",
     "file-loader": "^5.0.2",
-    "game-core": "git+ssh://git@code.apowo.com:PixelPai/game-core.git#modular",
     "html-webpack-plugin": "^4.3.0",
     "net-socket-packet": "git+ssh://git@code.apowo.com:PixelPai/net-socket-packet.git",
     "node-sloc": "^0.1.12",
     "rimraf": "^3.0.2",
     "tern": "^0.24.3",
     "terser-webpack-plugin": "^3.0.5",
-    "tooqingui": "^0.4.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
