--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "outside": "bin/outside"
   },
   "scripts": {
-    "dev": "rm -rf dist && webpack && mv dist/dist/* dist/ && webpack-dev-server --mode development"
+    "dev": "rm -rf dist && webpack && mv dist/dist/* dist/ && webpack-dev-server --mode development",
+    "mkproto:clean": "rimraf ./lib/protocols.d.ts ./lib/protocols.js",
+    "mkproto:tojs": "pbjs -t static-module ./protocol/*.proto -o ./lib/protocols.js",
+    "mkproto": "yarn mkproto:clean && yarn mkproto:tojs && pbts -o ./lib/protocols.d.ts ./lib/protocols.js"
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
@@ -34,7 +37,6 @@
     "html-webpack-plugin": "^4.3.0",
     "net-socket-packet": "git+ssh://git@code.apowo.com:PixelPai/net-socket-packet.git",
     "node-sloc": "^0.1.12",
-    "rimraf": "^3.0.2",
     "tern": "^0.24.3",
     "terser-webpack-plugin": "^3.0.5",
     "webpack": "^4.43.0",
