--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "sourceMap": false,
     "outDir": "types",
     "typeRoots": [
-      "node_modules/@types",
-      "node_modules/phaser/types"
+      "node_modules/@types"
     ]
   },
   "exclude": [
