--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "test",
-  "main": "dist/app.js",
+  "name": "webworker-rpc",
+  "main": "registry/rpcpeer.js",
   "author": "apowo",
   "license": "MIT",
   "bin": {
     "outside": "bin/outside"
   },
   "scripts": {
-    "dev": "rm -rf dist && webpack && webpack-dev-server --config ./webpack.config.js",
+    "build": "rm -rf registry && webpack",
+    "dev": "rm -rf dist && webpack --config ./webpack.dev.config.js && webpack-dev-server --config ./webpack.dev.config.js",
     "mkproto:clean": "rimraf ./lib/protocols.d.ts ./lib/protocols.js",
     "mkproto:tojs": "pbjs -t static-module ./protocol/*.proto -o ./lib/protocols.js",
     "mkproto": "yarn mkproto:clean && yarn mkproto:tojs && pbts -o ./lib/protocols.d.ts ./lib/protocols.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ApowoGames/webworker-rpc"
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
@@ -18,6 +23,7 @@
     "dts-dom": "^3.6.0",
     "expose-loader": "^0.7.5",
     "fs-extra": "^9.0.0",
+    "genversion": "^2.2.1",
     "jsdoc": "^3.6.4",
     "protobufjs": "^6.10.1",
     "remove": "^0.1.5",
