--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webworker-rpc",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "release/rpcpeer.js",
   "author": "apowo",
   "license": "MIT",
@@ -8,11 +8,13 @@
     "outside": "bin/outside"
   },
   "scripts": {
+    "build:dev": "rm -rf release && webpack",
     "build": "rm -rf release && webpack && yarn version --patch",
+    "dts": "dts-bundle --configJson dts-bundle.json",
     "dev": "rm -rf dist && webpack --config ./webpack.dev.config.js && webpack-dev-server --config ./webpack.dev.config.js",
-    "mkproto:clean": "rimraf ./lib/protocols.d.ts ./lib/protocols.js",
-    "mkproto:tojs": "pbjs -t static-module ./protocol/*.proto -o ./lib/protocols.js",
-    "mkproto": "yarn mkproto:clean && yarn mkproto:tojs && pbts -o ./lib/protocols.d.ts ./lib/protocols.js"
+    "mkproto:clean": "rimraf ./src/lib/protocols.d.ts ./src/lib/protocols.js",
+    "mkproto:tojs": "pbjs -t static-module ./protocol/*.proto -o ./src/lib/protocols.js",
+    "mkproto": "yarn mkproto:clean && yarn mkproto:tojs && pbts -o ./src/lib/protocols.d.ts ./src/lib/protocols.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
+    "dts-bundle": "^0.7.3",
     "dts-dom": "^3.6.0",
     "expose-loader": "^0.7.5",
     "fs-extra": "^9.0.0",
