生成声明文件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "webworker",
       "dom"
     ],
-    "declaration": false,
+    "declaration": true,
     "noImplicitAny": false,
     "sourceMap": false,
     "outDir": "types",
@@ -19,6 +19,7 @@
     ]
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/lib"
   ],
 }
