--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "webworker-rpc",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "release/rpcpeer.js",
+  "types": "release/index.d.ts",
   "author": "apowo",
   "license": "MIT",
   "bin": {
