--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "webworker-rpc",
   "version": "0.0.8",
   "main": "release/rpcpeer.js",
-  "types": "release/index.d.ts",
+  "types": "release/rpcpeer.d.ts",
   "author": "apowo",
   "license": "MIT",
   "scripts": {
     "dts": "dts-bundle --configJson dts-bundle.json",
-    "build:dev": "rm -rf release && webpack && mkdir types/src/lib && cp src/lib/protocols.d.ts types/src/lib/ && yarn dts && rm -rf types",
+    "build:dev": "rm -rf release && webpack && mkdir types/src/lib && cp src/lib/protocols.d.ts types/src/lib/ && yarn dts && rm -rf types && chmod +x ./src/lib/injectManagerWorker.sh && ./src/lib/injectManagerWorker.sh",
     "build": "yarn build:dev && yarn version --patch",
     "dev": "rm -rf dist && webpack --config ./webpack.dev.config.js && rm -rf types && webpack-dev-server --config ./webpack.dev.config.js",
     "mkproto:clean": "rimraf ./src/lib/protocols.d.ts ./src/lib/protocols.js",
@@ -31,8 +31,7 @@
     "ts-loader": "^6.2.1",
     "tslint": "^6.0.0",
     "tslint-webpack-plugin": "^2.1.0",
-    "typescript": "^3.7.5",
-    "worker-loader": "^2.0.0"
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "config": "^3.3.1",
