--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
       "node_modules/@types"
     ]
   },
-  "exclude": [
-    "node_modules",
-    "src/lib",
+  "include": [
+    "src",
   ],
 }
