--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "webworker-rpc",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "main": "release/index.js",
   "types": "release/index.d.ts",
   "author": "apowo",
   "license": "MIT",
   "scripts": {
     "dts": "dts-bundle --configJson dts-bundle.json",
-    "build:dev": "rm -rf release && mkdir release && cp src/protocols.d.ts src/protocols.js release/ && cp types/* release/ && rm -rf types",
+    "build:dev": "rm -rf types && rm -rf release && webpack && cp src/protocols.d.ts types/ && yarn dts && rm -rf types",
     "build": "yarn build:dev && yarn version --patch",
-    "dev": "rm -rf dist && webpack --config ./webpack.dev.config.js && rm -rf types && webpack-dev-server --config ./webpack.dev.config.js",
+    "dev": "rm -rf types && rm -rf dist && webpack --config ./webpack.dev.config.js && rm -rf types && webpack-dev-server --config ./webpack.dev.config.js",
     "mkproto:clean": "rimraf ./src/protocols.d.ts ./src/protocols.js",
     "mkproto:tojs": "pbjs -t static-module ./protocol/*.proto -o ./src/protocols.js",
     "mkproto": "yarn mkproto:clean && yarn mkproto:tojs && pbts -o ./src/protocols.d.ts ./src/protocols.js"
